[package]
name = "dodger"
version = "1.8.0"
edition = "2021"

[dependencies]
ggez = "0.9.3"
rand = "0.8"
thiserror = "2.0.11"
winapi = { version = "0.3", features = ["wincon", "winuser"], optional = true }

[[bin]]
name = "dodger"
path = "src/main.rs"

[features]
default = ["win_support"]
win_support = ["winapi"]

